# pokeapi-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/pokeapi/v2/: base.py  client.py  load_json.py  models.py  resource.py
tests/: conftest.py  load_json_file.py  test_pokemon.py  test_pokemon_list.py  test_pokemon_species.py
tests/data/pokemon/: 1.json  10001.json
