[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokeapi"]

[project]
name = "pokeapi-py"
version = "0.0.1"
authors = [
    { name="Alexandre Carlton" },
]
description = "A client for PokeAPI"
requires-python = ">=3.13"
dependencies = [
    "requests==2.32.3",
    "pydantic==2.10.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]

[dependency-groups]
test = [
    "pytest==8.3.4",
    "testcontainers==4.9.0",
]
dev = [
    "mypy==1.14.1",
    "types-requests==2.32.0.20241016",
    "ruff>=0.9.9",
    "python-lsp-server>=1.12.2",
]

[project.urls]
Homepage = "https://github.com/AlexandreCarlton/pokeapi-py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
