[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokeapi"]

[project]
name = "pokeapi-py"
version = "0.0.1"
authors = [
    { name="Alexandre Carlton" },
]
description = "A client for PokeAPI"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.11.13",
    "async-lru==2.0.4",
    "pydantic==2.10.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]

[dependency-groups]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.23.8",
    "testcontainers==4.9.0",
]
dev = [
    "python-lsp-server==1.12.2",
]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[project.urls]
Homepage = "https://github.com/AlexandreCarlton/pokeapi-py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode = "auto"
